--- a/requirements.txt
+++ b/requirements.txt
@@ -186,3 +186,5 @@ zope-interface==5.3.0
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
+
+djangorestframework-simplejwt[crypto]
